--- a/rshark/ethernet/fn.dissect.html
+++ b/rshark/ethernet/fn.dissect.html
@@ -25,7 +25,7 @@
     
 
     <section class="sidebar">
-        
+        <a href='../../rshark/index.html'><img src='https://raw.githubusercontent.com/musec/rusty-shark/master/artwork/wordmark.png' alt='' width='100'></a>
         <p class='location'><a href='../index.html'>rshark</a>::<wbr><a href='index.html'>ethernet</a></p><script>window.sidebarCurrent = {name: 'dissect', ty: 'fn', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </section>
 
