--- a/rshark/fn.raw.html
+++ b/rshark/fn.raw.html
@@ -25,7 +25,7 @@
     
 
     <section class="sidebar">
-        
+        <a href='../rshark/index.html'><img src='https://raw.githubusercontent.com/musec/rusty-shark/master/artwork/wordmark.png' alt='' width='100'></a>
         <p class='location'><a href='index.html'>rshark</a></p><script>window.sidebarCurrent = {name: 'raw', ty: 'fn', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </section>
 
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-1450' class='srclink' href='../src/rshark/lib.rs.html#259-263' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-1450' class='srclink' href='../src/rshark/lib.rs.html#261-265' title='goto source code'>[src]</a></span></h1>
 <pre class='rust fn'>pub fn raw(data: <a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>&amp;[</a><a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a><a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>]</a>) -&gt; <a class='type' href='../rshark/type.Result.html' title='rshark::Result'>Result</a></pre><div class='docblock'><p>Dissector of last resort: store raw bytes without interpretation.</p>
 </div></section>
     <section id='search' class="content hidden"></section>
