--- a/rshark/type.Result.html
+++ b/rshark/type.Result.html
@@ -25,7 +25,7 @@
     
 
     <section class="sidebar">
-        
+        <a href='../rshark/index.html'><img src='https://raw.githubusercontent.com/musec/rusty-shark/master/artwork/wordmark.png' alt='' width='100'></a>
         <p class='location'><a href='index.html'>rshark</a></p><script>window.sidebarCurrent = {name: 'Result', ty: 'type', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </section>
 
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-1065' class='srclink' href='../src/rshark/lib.rs.html#181' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-1065' class='srclink' href='../src/rshark/lib.rs.html#183' title='goto source code'>[src]</a></span></h1>
 <pre class='rust typedef'>type Result&lt;T = <a class='enum' href='../rshark/enum.Val.html' title='rshark::Val'>Val</a>&gt; = <a class='enum' href='http://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;T, <a class='enum' href='../rshark/enum.Error.html' title='rshark::Error'>Error</a>&gt;;</pre><div class='docblock'><p>The result of a dissection function.</p>
 </div></section>
     <section id='search' class="content hidden"></section>
