--- a/rshark/enum.Endianness.html
+++ b/rshark/enum.Endianness.html
@@ -25,7 +25,7 @@
     
 
     <section class="sidebar">
-        
+        <a href='../rshark/index.html'><img src='https://raw.githubusercontent.com/musec/rusty-shark/master/artwork/wordmark.png' alt='' width='100'></a>
         <p class='location'><a href='index.html'>rshark</a></p><script>window.sidebarCurrent = {name: 'Endianness', ty: 'enum', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </section>
 
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-1088' class='srclink' href='../src/rshark/lib.rs.html#191-194' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-1088' class='srclink' href='../src/rshark/lib.rs.html#193-196' title='goto source code'>[src]</a></span></h1>
 <pre class='rust enum'>pub enum Endianness {
     BigEndian,
     LittleEndian,
