--- a/rshark/fn.unsigned.html
+++ b/rshark/fn.unsigned.html
@@ -25,7 +25,7 @@
     
 
     <section class="sidebar">
-        
+        <a href='../rshark/index.html'><img src='https://raw.githubusercontent.com/musec/rusty-shark/master/artwork/wordmark.png' alt='' width='100'></a>
         <p class='location'><a href='index.html'>rshark</a></p><script>window.sidebarCurrent = {name: 'unsigned', ty: 'fn', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </section>
 
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-1271' class='srclink' href='../src/rshark/lib.rs.html#232-256' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-1271' class='srclink' href='../src/rshark/lib.rs.html#234-258' title='goto source code'>[src]</a></span></h1>
 <pre class='rust fn'>pub fn unsigned(buffer: <a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>&amp;[</a><a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a><a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>]</a>, endianness: <a class='enum' href='../rshark/enum.Endianness.html' title='rshark::Endianness'>Endianness</a>) -&gt; <a class='type' href='../rshark/type.Result.html' title='rshark::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.u64.html'>u64</a>&gt;</pre><div class='docblock'><p>Parse a signed integer of a given endianness from a byte buffer.</p>
 
 <p>The size of the buffer will be used to determine the size of the integer
