--- a/rshark/index.html
+++ b/rshark/index.html
@@ -25,7 +25,7 @@
     
 
     <section class="sidebar">
-        
+        <a href='../rshark/index.html'><img src='https://raw.githubusercontent.com/musec/rusty-shark/master/artwork/wordmark.png' alt='' width='100'></a>
         <p class='location'></p><script>window.sidebarCurrent = {name: 'rshark', ty: 'mod', relpath: '../'};</script>
     </section>
 
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-0' class='srclink' href='../src/rshark/lib.rs.html#1-267' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-0' class='srclink' href='../src/rshark/lib.rs.html#1-269' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p><code>rshark</code>, the Rusty Shark library, is a library for inspecting malicious packets.</p>
 
 <h1 id="background" class='section-header'><a
