--- a/rshark/ip/index.html
+++ b/rshark/ip/index.html
@@ -25,7 +25,7 @@
     
 
     <section class="sidebar">
-        
+        <a href='../../rshark/index.html'><img src='https://raw.githubusercontent.com/musec/rusty-shark/master/artwork/wordmark.png' alt='' width='100'></a>
         <p class='location'><a href='../index.html'>rshark</a></p><script>window.sidebarCurrent = {name: 'ip', ty: 'mod', relpath: '../'};</script><script defer src="../sidebar-items.js"></script>
     </section>
 
