--- a/rshark/type.Dissector.html
+++ b/rshark/type.Dissector.html
@@ -25,7 +25,7 @@
     
 
     <section class="sidebar">
-        
+        <a href='../rshark/index.html'><img src='https://raw.githubusercontent.com/musec/rusty-shark/master/artwork/wordmark.png' alt='' width='100'></a>
         <p class='location'><a href='index.html'>rshark</a></p><script>window.sidebarCurrent = {name: 'Dissector', ty: 'type', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </section>
 
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-1078' class='srclink' href='../src/rshark/lib.rs.html#188' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-1078' class='srclink' href='../src/rshark/lib.rs.html#190' title='goto source code'>[src]</a></span></h1>
 <pre class='rust typedef'>type Dissector = fn(<a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>&amp;[</a><a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a><a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>]</a>) -&gt; <a class='type' href='../rshark/type.Result.html' title='rshark::Result'>Result</a>&lt;<a class='enum' href='../rshark/enum.Val.html' title='rshark::Val'>Val</a>&gt;;</pre><div class='docblock'><p>Type of dissection functions.</p>
 </div></section>
     <section id='search' class="content hidden"></section>
