Update to include 'deep inspection' pun.

--- a/rshark/index.html
+++ b/rshark/index.html
@@ -45,8 +45,9 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-0' class='srclink' href='../src/rshark/lib.rs.html#1-269' title='goto source code'>[src]</a></span></h1>
-<div class='docblock'><p><code>rshark</code>, the Rusty Shark library, is a library for inspecting malicious packets.</p>
+        </span><a id='src-0' class='srclink' href='../src/rshark/lib.rs.html#1-270' title='goto source code'>[src]</a></span></h1>
+<div class='docblock'><p><code>rshark</code>, the Rusty Shark library, is a library for deep inspection
+of malicious packets.</p>
 
 <h1 id="background" class='section-header'><a
                            href="#background">Background</a></h1>
