--- a/src/rshark/lib.rs.html
+++ b/src/rshark/lib.rs.html
@@ -309,9 +309,11 @@
 <span id="267">267</span>
 <span id="268">268</span>
 <span id="269">269</span>
+<span id="270">270</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! `rshark`, the Rusty Shark library, is a library for inspecting malicious packets.</span>
+<span class='doccomment'>//! `rshark`, the Rusty Shark library, is a library for deep inspection</span>
+<span class='doccomment'>//! of malicious packets.</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! # Background</span>
 <span class='doccomment'>//!</span>
