--- a/src/rshark/ip/mod.rs.html
+++ b/src/rshark/ip/mod.rs.html
@@ -143,8 +143,8 @@
 
 <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>dissect</span>(<span class='ident'>data</span> : <span class='kw-2'>&amp;</span>[<span class='ident'>u8</span>]) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span> {
     <span class='kw'>if</span> <span class='ident'>data</span>.<span class='ident'>len</span>() <span class='op'>&lt;</span> <span class='number'>20</span> {
-        <span class='kw'>return</span> <span class='prelude-val'>Err</span>(<span class='ident'>Error</span>::<span class='ident'>Underflow</span>(<span class='number'>20</span>, <span class='ident'>data</span>.<span class='ident'>len</span>(),
-            <span class='string'>&quot;An IP packet must be at least 20 B&quot;</span>.<span class='ident'>to_string</span>()))
+        <span class='kw'>return</span> <span class='prelude-val'>Err</span>(<span class='ident'>Error</span>::<span class='ident'>Underflow</span> { <span class='ident'>expected</span>: <span class='number'>20</span>, <span class='ident'>have</span>: <span class='ident'>data</span>.<span class='ident'>len</span>(),
+            <span class='ident'>message</span>: <span class='string'>&quot;An IP packet must be at least 20 B&quot;</span>.<span class='ident'>to_string</span>() })
     }
 
     <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>values</span>:<span class='ident'>Vec</span><span class='op'>&lt;</span><span class='ident'>NamedValue</span><span class='op'>&gt;</span> <span class='op'>=</span> <span class='macro'>vec</span><span class='macro'>!</span>[];
