--- a/src/rshark/lib.rs.html
+++ b/src/rshark/lib.rs.html
@@ -477,16 +477,16 @@
 <span class='doccomment'>/// An error related to packet dissection (underflow, bad value, etc.).</span>
 <span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>Debug</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>enum</span> <span class='ident'>Error</span> {
-    <span class='ident'>Underflow</span>(<span class='ident'>usize</span>, <span class='ident'>usize</span>, <span class='ident'>String</span>),
+    <span class='ident'>Underflow</span> { <span class='ident'>expected</span>: <span class='ident'>usize</span>, <span class='ident'>have</span>: <span class='ident'>usize</span>, <span class='ident'>message</span>: <span class='ident'>String</span>, },
     <span class='ident'>InvalidData</span>(<span class='ident'>String</span>),
 }
 
 <span class='kw'>impl</span> <span class='ident'>fmt</span>::<span class='ident'>Display</span> <span class='kw'>for</span> <span class='ident'>Error</span> {
     <span class='kw'>fn</span> <span class='ident'>fmt</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>f</span> : <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>fmt</span>::<span class='ident'>Formatter</span>) <span class='op'>-&gt;</span> <span class='ident'>fmt</span>::<span class='prelude-ty'>Result</span> {
         <span class='kw'>match</span> <span class='self'>self</span> {
-            <span class='kw-2'>&amp;</span><span class='ident'>Error</span>::<span class='ident'>Underflow</span>(<span class='ident'>expected</span>, <span class='ident'>have</span>, <span class='kw-2'>ref</span> <span class='ident'>msg</span>) <span class='op'>=&gt;</span>
+            <span class='kw-2'>&amp;</span><span class='ident'>Error</span>::<span class='ident'>Underflow</span> { <span class='ident'>expected</span>, <span class='ident'>have</span>, <span class='kw-2'>ref</span> <span class='ident'>message</span> } <span class='op'>=&gt;</span>
                 <span class='macro'>write</span><span class='macro'>!</span>[<span class='ident'>f</span>, <span class='string'>&quot;underflow (expected {}, have {}): {}&quot;</span>,
-                    <span class='ident'>expected</span>, <span class='ident'>have</span>, <span class='ident'>msg</span>],
+                    <span class='ident'>expected</span>, <span class='ident'>have</span>, <span class='ident'>message</span>],
 
             <span class='kw-2'>&amp;</span><span class='ident'>Error</span>::<span class='ident'>InvalidData</span>(<span class='kw-2'>ref</span> <span class='ident'>msg</span>) <span class='op'>=&gt;</span> <span class='macro'>write</span><span class='macro'>!</span>[<span class='ident'>f</span>, <span class='string'>&quot;invalid data: {}&quot;</span>, <span class='ident'>msg</span>],
         }
